fixed image clipping

--- a/components/style.module.scss
+++ b/components/style.module.scss
@@ -35,13 +35,16 @@
 	padding: 24px;
 	gap: 24px;
 	display: flex;
-	height: 100%;
 	transition: all 0.2s cubic-bezier(0.075, 0.82, 0.165, 1);
 	&:hover {
 		// transform: scale(1.02);
 		box-shadow: 0 0 10px 0 #2e2e2e;
 		border-color: #5f5f5f;
 	}
+	img {
+		aspect-ratio: 1 !important;
+	}
+
 	.title {
 		&::before {
 			content: ">";
